arrumei as imagens

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </ul>
                 A combinação dessas intensidades forma as cores que vemos na tela.
             </p>
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.vecteezy.com%2Farte-vetorial%2F15395714-esquema-de-modelo-de-cores-rgb-mistura-aditiva-de-tres-cores-primarias-tres-circulos-sobrepostos-ilustracao-simples-para-educacao&psig=AOvVaw21Ik_eo3Mupue7jKfYfKuA&ust=1740663149730000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCNCD9Ne54YsDFQAAAAAdAAAAABAE" alt="Diagrama RGB" class="img-diagram">
+            <img src="RGB.jpg" alt="Diagrama RGB" class="img-diagram">
         </section>
 
         <section id="pixel">
@@ -48,7 +48,7 @@
                     <li>Com valores intermediários, diferentes tons e variações podem ser obtidos.</li>
                 </ul>
             </p>
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fapenasimagens.com%2Fpt%2Fpixel-imagem-digital%2F&psig=AOvVaw2aE-XXrHkjn4AraPH6Pjv3&ust=1740663205544000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCLjp2vG54YsDFQAAAAAdAAAAABAE" alt="Funcionamento do Pixel" class="img-diagram">
+            <img src="Pixel.jpeg" alt="Funcionamento do Pixel" class="img-diagram">
         </section>
 
         <section id="cmyk">
@@ -62,7 +62,7 @@
             <p>
                 O modelo CMYK é comum em impressoras, onde o papel é colorido pela aplicação dessas tintas. A combinação dessas cores pode gerar uma variedade de cores que é diferente da do modelo RGB, pois o processo de subtração de luz resulta em uma paleta diferente de cores.
             </p>
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpt.vecteezy.com%2Farte-vetorial%2F15395716-esquema-de-modelo-de-cores-cmyk-tres-circulos-sobrepostos-nas-cores-ciano-magenta-e-amarelo-misturando-tres-cores-primarias-ilustracao-simples-para-educacao&psig=AOvVaw3dcQ_cX1fyjR6js3bWCyub&ust=1740663233666000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCMDGk4O64YsDFQAAAAAdAAAAABAE" alt="Diagrama CMYK" class="img-diagram">
+            <img src="CMYK.jpg" alt="Diagrama CMYK" class="img-diagram">
         </section>
     </main>
 
